<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_buy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_loading"
    android:padding="10sp"
    tools:context=".HomepageActivity">


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:background="#EFEFEF"
        android:fontFamily="@font/belgrano"
        android:text="@string/logout"
        android:textSize="10sp"
        app:backgroundTint="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/belgrano"
        android:text="@string/tv_brands"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/iv_shoes1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/ic_jordan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.789" />

            <TextView
                android:id="@+id/tv_brand1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/brand1"
                android:textColor="#2C2C2C"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_shoes1"
                app:layout_constraintEnd_toEndOf="@+id/iv_shoes1"
                app:layout_constraintStart_toStartOf="@+id/iv_shoes1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/iv_shoes2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_nike"
                app:layout_constraintStart_toEndOf="@+id/iv_shoes1"
                app:layout_constraintTop_toTopOf="@+id/iv_shoes1" />

            <TextView
                android:id="@+id/tv_brand2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/brand2"
                android:textColor="#2C2C2C"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_shoes2"
                app:layout_constraintEnd_toEndOf="@+id/iv_shoes2"
                app:layout_constraintStart_toStartOf="@+id/iv_shoes2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/iv_shoes3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_converse"
                app:layout_constraintStart_toEndOf="@+id/iv_shoes2"
                app:layout_constraintTop_toTopOf="@+id/iv_shoes2" />

            <TextView
                android:id="@+id/tv_brand3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/brand3"
                android:textColor="#2C2C2C"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_shoes3"
                app:layout_constraintEnd_toEndOf="@+id/iv_shoes3"
                app:layout_constraintStart_toStartOf="@+id/iv_shoes3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/iv_shoes4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_reebok"
                app:layout_constraintStart_toEndOf="@+id/iv_shoes3"
                app:layout_constraintTop_toTopOf="@+id/iv_shoes3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/brand4"
                android:textColor="#2C2C2C"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_shoes4"
                app:layout_constraintEnd_toEndOf="@+id/iv_shoes4"
                app:layout_constraintStart_toStartOf="@+id/iv_shoes4"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/iv_shoes5"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_adidas"
                app:layout_constraintStart_toEndOf="@+id/iv_shoes4"
                app:layout_constraintTop_toTopOf="@+id/iv_shoes4" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:text="@string/brand5"
                android:textColor="#2C2C2C"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_shoes4"
                app:layout_constraintEnd_toEndOf="@+id/iv_shoes5"
                app:layout_constraintStart_toStartOf="@+id/iv_shoes5"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/belgrano"
        android:text="Total Price:"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="14dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_totalPriceText">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/belgrano"
            android:text="Your Cart:"
            android:textColor="#2C2C2C"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_addToCart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_cart"
            android:fontFamily="@font/belgrano"
            android:text="Add to Cart"
            android:textColor="#004A6C"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="355dp"
            android:layout_height="351dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.941"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EDEDED">

                <TextView
                    android:id="@+id/tv_listOfItems"
                    android:layout_width="250dp"
                    android:layout_height="1345dp"
                    android:fontFamily="@font/belgrano"
                    android:text=""
                    android:textColor="#2C2C2C"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/belgrano"
        android:text="0.0"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_totalPriceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_totalPriceText"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>